test for error status
